This a Digital Uplift Clone

--- a/digitalUplift.html
+++ b/digitalUplift.html
@@ -13,7 +13,7 @@
       <header>
         <div class="logo">
           <a href="#">
-            <img src="images/img1.png" alt="Digital Uplift Program" />
+            <img src="img1.png" alt="Digital Uplift Program" />
           </a>
         </div>
         <nav class="menu">
@@ -47,8 +47,8 @@
         <a href="#" class="btn">Apply Here</a>
       </div>
       <div class="banner2">
-        <img src="images/img2.webp" alt="dotted" class="img1" />
-        <img src="images/dot1.webp" alt="dotted" class="img2" />
+        <img src="img2.webp" alt="dotted" class="img1" />
+        <img src="dot1.webp" alt="dotted" class="img2" />
       </div>
     </div>
 
@@ -93,7 +93,7 @@
           <a href="#" class="btn">Apply Here</a>
         </div>
       </div>
-      <img src="images/dot1.webp" alt="img4" class="img4" />
+      <img src="dot1.webp" alt="img4" class="img4" />
     </div>
 
     <!-- Sec 3 -->
@@ -101,30 +101,30 @@
       <div class="main">
         <div class="main1">
           <div class="quote">
-           <img src="images/img5.svg" alt=  "icn" style="width: 3.6%; height: 70%;">
+           <img src="img5.svg" alt=  "icn" style="width: 3.6%; height: 70%;">
               <p>Get trained with a digital skill for FREE</p>
           </div>
           <div class="quote">
-            <img src="images/img6.svg" alt="icn" style="width: 3.6%; height: 70%;">
+            <img src="img6.svg" alt="icn" style="width: 3.6%; height: 70%;">
             <p>Soft Skills Bootcamp</p>
           </div>
           <div class="quote">
-            <img src="images/img7.svg" alt="icn" style="width: 3.6%; height: 70%;">
+            <img src="img7.svg" alt="icn" style="width: 3.6%; height: 70%;">
             <p>Internship</p>
           </div>
           <div class="quote">
-            <img src="images/img8.svg" alt="icn" style="width: 3.6%; height: 70%;">
+            <img src="img8.svg" alt="icn" style="width: 3.6%; height: 70%;">
             <p>Acquire globally recognised certifications</p>
           </div>
           <div class="quote">
-            <img src="images/img9.svg" alt="icn" style="width: 3.6%; height: 70%;"></img>
+            <img src="img9.svg" alt="icn" style="width: 3.6%; height: 70%;"></img>
             <p>Access to Freelancing and Entrepreneurship</p>
           </div>
         </div>
         <div class="main2">
           <p>What You'll Get</p>
         </div>
-        <img src="images/dot1.webp" alt="" class="img5">
+        <img src="dot1.webp" alt="" class="img5">
       </div>
     </div>
     
@@ -140,11 +140,11 @@
             <p class="para">Data Science</p>
           </div>
           <div class="crs">
-            <img src="images/img11.png" alt="" class="crs_img" style="width: 50px; height: 50px;">
+            <img src="img11.png" alt="" class="crs_img" style="width: 50px; height: 50px;">
             <p class="para">Frontend Development</p>
           </div>
           <div class="crs">
-            <img src="images/img12.png" alt="" class="crs_img" style="width: 50px; height: 50px;">
+            <img src="img12.png" alt="" class="crs_img" style="width: 50px; height: 50px;">
             <p class="para">Backend Development</p>
           </div>
           <div class="crs">
@@ -152,11 +152,11 @@
             <p class="para">Digital Marketing</p>
           </div>
           <div class="crs">
-            <img src="images/img14.png" alt="" class="crs_img" style="width: 50px; height: 50px;">
+            <img src="img14.png" alt="" class="crs_img" style="width: 50px; height: 50px;">
             <p class="para">Product Management</p>
           </div>
           <div class="crs">
-            <img src="images/img15.png" alt="" class="crs_img" style="width: 50px; height: 50px;">
+            <img src="img15.png" alt="" class="crs_img" style="width: 50px; height: 50px;">
             <p class="para">Design: Basic/UI/UX</p>
           </div>
         </div>
@@ -168,19 +168,19 @@
         </div>
         <div class="main">
           <div class="crs">
-            <img src="images/img16.png" alt="" class="crs_img" style="width: 50px; height: 50px;">
+            <img src="img16.png" alt="" class="crs_img" style="width: 50px; height: 50px;">
             <p class="para">Digital
               Literacy</p>
           </div>
           <div class="crs">
-            <img src="images/img17.png" alt="" class="crs_img" style="width: 50px; height: 50px;">
+            <img src="img17.png" alt="" class="crs_img" style="width: 50px; height: 50px;">
             <p class="para">Tech Support & Sales
             </p>
           </div>
           </div>
-      </div>
-      <img src="images/dot1.webp" alt="dot" class="dot1">
-      <img src="images/dot1.webp" alt="dot" class="dot2">
+      </div>g
+      <img src="dot1.webp" alt="dot" class="dot1">
+      <img src="dot1.webp" alt="dot" class="dot2">
     </div>
 
     <!-- Sec 5 -->
@@ -188,7 +188,7 @@
       <h2>Application is ongoing!</h2>
       <div class="main">
         <p>Are you ready to make progress in your career and choose what to learn for your next commitment?</p>
-        <a href="#" class="btn">Apply now</a>
+        <a href="#" class="btn">Apply now</a>l
       </div>
     </div>
 
@@ -207,10 +207,10 @@
         </div>
       </div>
       <div class="sec6_3">
-        <img src="images/img18.png" alt="sec6_img1" class="spnr">
-        <img src="images/img19.png" alt="sec6_img2" class="spnr">
-        <img src="images/img20.png" alt="sec6_img3" class="spnr">
-        <img src="images/img21.png" alt="sec6_img4" class="spnr">
+        <img src="img18.png" alt="sec6_img1" class="spnr">
+        <img src="img19.png" alt="sec6_img2" class="spnr">
+        <img src="img20.png" alt="sec6_img3" class="spnr">
+        <img src="img21.png" alt="sec6_img4" class="spnr">
       </div>
     </div>
     </div>
@@ -222,10 +222,10 @@
     <div class="main_1">
       <p>A FREE program to empower Nigerian Youths, Women, Disadvantaged, Deportees, Trafficked, Internally Displaced Persons, People living with Disabilities and GBV Survivors with high demand digital skills training and internship.</p>
       <div class="icons">
-        <a href="#"><img src="images/img23.svg" class="icon" alt="icons"></img></a>
-        <a href="#"><img src="images/img24.svg" class="icon" alt="icons"></img></a>
-        <a href="#"><img src="images/img25.svg" class="icon" alt="icons"></img></a>
-        <a href="#"><img src="images/img26.svg " class="icon" alt="icons"></img></a>
+        <a href="#"><img src="img23.svg" class="icon" alt="icons"></img></a>
+        <a href="#"><img src="img24.svg" class="icon" alt="icons"></img></a>
+        <a href="#"><img src="img25.svg" class="icon" alt="icons"></img></a>
+        <a href="#"><img src="img26.svg " class="icon" alt="icons"></img></a>
       </div>
     </div>
     <div class="main_2">
@@ -239,7 +239,7 @@
     <div class="main_3">
       <div class="contact">
           <a href="#">
-        <img src="images/img27.svg" alt="phone" class="cont">
+        <img src="img27.svg" alt="phone" class="cont">
         <div class="phone">
           <h1>Contact Us</h1>
           <h2>09095459999</h2>
@@ -249,7 +249,7 @@
 
       <div class="contact">
         <a href="#">
-      <img src="images/img28.svg" alt="mail" class="cont">
+      <img src="img28.svg" alt="mail" class="cont">
       <div class="phone">
         <h1>Email us</h1>
         <h2>info@digitalupliftprogram.org</h2>
