--- a/digitalUplift.html
+++ b/digitalUplift.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="media.css">
     <title>Digital Uplift Program</title>
   </head>
   <body>
@@ -13,7 +14,7 @@
       <header>
         <div class="logo">
           <a href="#">
-            <img src="img1.png" alt="Digital Uplift Program" />
+            <img src="images/img1.png" alt="Digital Uplift Program" />
           </a>
         </div>
         <nav class="menu">
@@ -23,9 +24,12 @@
           <a href="">FAQ</a>
           <a href="">Contact Us</a>
         </nav>
+        <div class="toggle">
         <a href="" class="btn">
           <div class="btn-container">Apply Here</div>
         </a>
+        <img src="images/togg.svg" alt="togg" class="togg">
+      </div>
       </header>
     </div>
 
@@ -47,8 +51,8 @@
         <a href="#" class="btn">Apply Here</a>
       </div>
       <div class="banner2">
-        <img src="img2.webp" alt="dotted" class="img1" />
-        <img src="dot1.webp" alt="dotted" class="img2" />
+        <img src="images/img2.webp" alt="dotted" class="img1" />
+        <img src="images/dot1.webp" alt="dotted" class="img2" />
       </div>
     </div>
 
@@ -93,7 +97,7 @@
           <a href="#" class="btn">Apply Here</a>
         </div>
       </div>
-      <img src="dot1.webp" alt="img4" class="img4" />
+      <img src="images/dot1.webp" alt="img4" class="img4" />
     </div>
 
     <!-- Sec 3 -->
@@ -102,42 +106,24 @@
         <div class="main1">
           <div class="quote">
 
-           <img src="img5.svg" alt=  "icn" style="width: 5.6%; height: 70%;">
+           <img src="images/img5.svg" alt=  "icn" style="width: 5.6%; height: 70%;">
 
               <p>Get trained with a digital skill for 20,OOO NAIRA ONLY</p>
           </div>
           <div class="quote">
-            <img src="img6.svg" alt="icn" style="width: 5.6%; height: 70%;">
+            <img src="images/img6.svg" alt="icn" style="width: 5.6%; height: 70%;">
             <p>Soft Skills Bootcamp</p>
           </div>
           <div class="quote">
-            <img src="img7.svg" alt="icn" style="width: 5.6%; height: 70%;">
+            <img src="images/img7.svg" alt="icn" style="width: 5.6%; height: 70%;">
             <p>Internship</p>
           </div>
           <div class="quote">
-            <img src="img8.svg" alt="icn" style="width: 5.6%; height: 70%;">
+            <img src="images/img8.svg" alt="icn" style="width: 5.6%; height: 70%;">
             <p>Acquire globally recognised certifications</p>
           </div>
           <div class="quote">
-            <img src="img9.svg" alt="icn" style="width: 5.6%; height: 70%;"></img>
-
-           <img src="images/img5.svg" alt=  "icn" style="width: 3.6%; height: 70%;">
-              <p>Get trained with a digital skill for FREE</p>
-          </div>
-          <div class="quote">
-            <img src="img6.svg" alt="icn" style="width: 3.6%; height: 70%;">
-            <p>Soft Skills Bootcamp</p>
-          </div>
-          <div class="quote">
-            <img src="img7.svg" alt="icn" style="width: 3.6%; height: 70%;">
-            <p>Internship</p>
-          </div>
-          <div class="quote">
-            <img src="img8.svg" alt="icn" style="width: 3.6%; height: 70%;">
-            <p>Acquire globally recognised certifications</p>
-          </div>
-          <div class="quote">
-            <img src="images/img9.svg" alt="icn" style="width: 3.6%; height: 70%;"></img>
+            <img src="images/img9.svg" alt="icn" style="width: 5.6%; height: 70%;"></img>
 
             <p>Access to Freelancing and Entrepreneurship</p>
           </div>
@@ -145,7 +131,7 @@
         <div class="main2">
           <p>What You'll Get</p>
         </div>
-        <img src="dot1.webp" alt="" class="img5">
+        <img src="images/dot1.webp" alt="" class="img5">
       </div>
     </div>
     
@@ -157,27 +143,27 @@
         <p class="course_title">Mandatory Courses</p>
         <div class="main">
           <div class="crs">
-            <img src="img10.png" alt="" class="crs_img" style="width: 50px; height: 50px;">
+            <img src="images/img10.png" alt="" class="crs_img" style="width: 50px; height: 50px;">
             <p class="para">Data Science</p>
           </div>
           <div class="crs">
-            <img src="img11.png" alt="" class="crs_img" style="width: 50px; height: 50px;">
+            <img src="images/img11.png" alt="" class="crs_img" style="width: 50px; height: 50px;">
             <p class="para">Frontend Development</p>
           </div>
           <div class="crs">
-            <img src="img12.png" alt="" class="crs_img" style="width: 50px; height: 50px;">
+            <img src="images/img12.png" alt="" class="crs_img" style="width: 50px; height: 50px;">
             <p class="para">Backend Development</p>
           </div>
           <div class="crs">
-            <img src="img13.png" alt="" class="crs_img" style="width: 50px; height: 50px;">
+            <img src="images/img13.png" alt="" class="crs_img" style="width: 50px; height: 50px;">
             <p class="para">Digital Marketing</p>
           </div>
           <div class="crs">
-            <img src="img14.png" alt="" class="crs_img" style="width: 50px; height: 50px;">
+            <img src="images/img14.png" alt="" class="crs_img" style="width: 50px; height: 50px;">
             <p class="para">Product Management</p>
           </div>
           <div class="crs">
-            <img src="img15.png" alt="" class="crs_img" style="width: 50px; height: 50px;">
+            <img src="images/img15.png" alt="" class="crs_img" style="width: 50px; height: 50px;">
             <p class="para">Design: Basic/UI/UX</p>
           </div>
         </div>
@@ -189,19 +175,19 @@
         </div>
         <div class="main">
           <div class="crs">
-            <img src="img16.png" alt="" class="crs_img" style="width: 50px; height: 50px;">
+            <img src="images/img16.png" alt="" class="crs_img" style="width: 50px; height: 50px;">
             <p class="para">Digital
               Literacy</p>
           </div>
           <div class="crs">
-            <img src="img17.png" alt="" class="crs_img" style="width: 50px; height: 50px;">
+            <img src="images/img17.png" alt="" class="crs_img" style="width: 50px; height: 50px;">
             <p class="para">Tech Support & Sales
             </p>
           </div>
           </div>
-      </div>g
-      <img src="dot1.webp" alt="dot" class="dot1">
-      <img src="dot1.webp" alt="dot" class="dot2">
+      </div>
+      <img src="images/dot1.webp" alt="dot" class="dot1">
+      <img src="images/dot1.webp" alt="dot" class="dot2">
     </div>
 
     <!-- Sec 5 -->
@@ -209,7 +195,7 @@
       <h2>Application is ongoing!</h2>
       <div class="main">
         <p>Are you ready to make progress in your career and choose what to learn for your next commitment?</p>
-        <a href="#" class="btn">Apply now</a>l
+        <a href="#" class="btn">Apply now</a>
       </div>
     </div>
 
@@ -228,25 +214,25 @@
         </div>
       </div>
       <div class="sec6_3">
-        <img src="img18.png" alt="sec6_img1" class="spnr">
-        <img src="img19.png" alt="sec6_img2" class="spnr">
-        <img src="img20.png" alt="sec6_img3" class="spnr">
-        <img src="img21.png" alt="sec6_img4" class="spnr">
+        <img src="images/img18.png" alt="sec6_img1" class="spnr">
+        <img src="images/img19.png" alt="sec6_img2" class="spnr">
+        <img src="images/img20.png" alt="sec6_img3" class="spnr">
+        <img src="images/img21.png" alt="sec6_img4" class="spnr">
       </div>
     </div>
     </div>
 
   <!-- Sec 7 -->
 <div class="sec7">
-  <img src="logo2.png" alt="logo2" class="logo2">
+  <img src="images/logo2.png" alt="logo2" class="logo2">
   <div class="main">
     <div class="main_1">
       <p>A FREE program to empower Nigerian Youths, Women, Disadvantaged, Deportees, Trafficked, Internally Displaced Persons, People living with Disabilities and GBV Survivors with high demand digital skills training and internship.</p>
       <div class="icons">
-        <a href="#"><img src="img23.svg" class="icon" alt="icons"></img></a>
-        <a href="#"><img src="img24.svg" class="icon" alt="icons"></img></a>
-        <a href="#"><img src="img25.svg" class="icon" alt="icons"></img></a>
-        <a href="#"><img src="img26.svg " class="icon" alt="icons"></img></a>
+        <a href="#"><img src="images/img23.svg" class="icon" alt="icons"></img></a>
+        <a href="#"><img src="images/img24.svg" class="icon" alt="icons"></img></a>
+        <a href="#"><img src="images/img25.svg" class="icon" alt="icons"></img></a>
+        <a href="#"><img src="images/img26.svg " class="icon" alt="icons"></img></a>
       </div>
     </div>
     <div class="main_2">
@@ -260,7 +246,7 @@
     <div class="main_3">
       <div class="contact">
           <a href="#">
-        <img src="img27.svg" alt="phone" class="cont">
+        <img src="images/img27.svg" alt="phone" class="cont">
         <div class="phone">
           <h1>Contact Us</h1>
           <h2>09095459999</h2>
@@ -270,7 +256,7 @@
 
       <div class="contact">
         <a href="#">
-      <img src="img28.svg" alt="mail" class="cont">
+      <img src="images/img28.svg" alt="mail" class="cont">
       <div class="phone">
         <h1>Email us</h1>
         <h2>info@digitalupliftprogram.org</h2>
